# vaultool-service

./: .gitignore  Cargo.toml
.sqlx/: query-9184a9cb558fb922903e59d34c23d27af142e53dd31cc766d7672ee2228339e8.json  query-ede30590be1de2f62bac5a423228ad7bc76db811a561acea0d133710ee455241.json  query-fe6251be3802db90150e02137834cd2e5605389d91ca714f01b891122bc66795.json
migrations/: 20260304204412_create_items_table.up.sql  20260306204726_items_quantity_constraints.down.sql  20260306204726_items_quantity_constraints.up.sql  20260306211221_create_files_table.up.sql  20260306214452_add_constraints_to_file.up.sql  20260306220615_add_file_extension.up.sql  20260310214144_add_priority_column.up.sql  20260312214222_files_item_id_nullable.up.sql  20260313202546_add_contenty_type.up.sql
src/: app_state.rs  lib.rs  main.rs
src/domain/: data_stores.rs  error.rs  item.rs  mod.rs
src/domain/dto/: file.rs  item.rs  mod.rs
src/domain/models/: file.rs  item.rs  mod.rs
src/routes/: files.rs  items.rs  mod.rs
src/services/: mod.rs
src/services/data_stores/: files.rs  items.rs  mod.rs  postgres_files_store.rs  postgres_items_store.rs
src/utils/: constant.rs  mod.rs  tracing.rs
tests/api/: helpers.rs  items.rs  main.rs
