[package]
name = "vaultool-service"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
log = "0.4.29"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "cookies"] }
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
async-trait = "0.1.89"
validator = "=0.20.0"
axum-extra = { version = "0.12.5", features = ["cookie"] }
chrono = "0.4.43"
lazy_static = "1.5.0"
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "postgres", "migrate", "time"] }
tower-http = { version = "0.6.6", features = ["fs", "cors", "trace"] }
tracing = "0.1.41"
color-eyre = "0.6.5"
thiserror = "2.0.18"
tracing-subscriber = { version = "0.3.20", features = ["registry", "env-filter"] }
tracing-error = "0.2.1"
secrecy = { version = "0.10.3", features = ["serde"] }
tap = "1.0.1"
